Fix Dark Mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 
 :root {
   --background: #ffffff;
+  --surface: rgba(255, 255, 255, 0.8);
   --foreground: #171717;
 }
 
@@ -12,20 +13,28 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../../public/textures/cover.jpg");
+  background-image: url("/textures/cover.jpg");
   background-size: 1000px;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --surface: rgba(0, 0, 0, 0.6);
+    --foreground: #ededed;
+  }
+
+  body {
+    background-image:
+    linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+    url("/textures/cover.jpg");
+  }
+}
+
 
 @keyframes scroll {
   0% {
